css big comments added

--- a/index.html
+++ b/index.html
@@ -532,12 +532,12 @@
           <hr class="horizontal-seperator" />
           <ul class="social__buttons">
             <li>
-              <a href="https://github.com/rahulshah456">
+              <a href="https://github.com/rahulshah456" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/rahul-kumar-shah-4b1b7b113/">
+              <a href="https://www.linkedin.com/in/rahul-kumar-shah-4b1b7b113/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
@@ -547,7 +547,7 @@
               </a>
             </li>
             <li>
-              <a href="https://dribbble.com/rahulshah456">
+              <a href="https://dribbble.com/rahulshah456" target="_blank" rel="noopener noreferrer">
                 <i class="fas fa-basketball-ball"></i>
               </a>
             </li>
