about page form maded responsive

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
         </div>
       </section>
       <div class="container__about">
+
         <div class="block__info">
           <h2
             class="color-primary bold"
@@ -550,13 +551,18 @@
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/rahul-kumar-shah-4b1b7b113/" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/in/rahulshah456/" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
             <li>
-              <a href="#">
-                <i class="fab fa-twitter"></i>
+              <a href="https://play.google.com/store/apps/developer?id=Droid2Developers" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-google-play"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.hackerrank.com/rahulshah456" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-hackerrank"></i>
               </a>
             </li>
             <li>
@@ -587,9 +593,8 @@
 
           <hr class="horizontal-seperator" />
 
-          <button class="block__header-button">
+          <button class="normal-button">
             DOWNLOAD RESUME
-            <!-- <i class="fas fa-download"></i> -->
           </button>
         </div>
         <div class="block__contact">
@@ -643,7 +648,7 @@
                 rows="5"
               ></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">SEND MESSAGE</button>
+            <button type="submit" class="normal-button">SEND MESSAGE</button>
           </form>
         </div>
       </div>
