--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <div class="accordion-item">
           <div class="accordion-item-header bg-dark-light">
             <h4 class="light color-white">Mobile Developer</h4>
-            <p class="bold color-primary">INCABLET MEDIA &nbsp;| &nbsp;INTERNSHIP</p>
+            <h6 class="bold color-primary">INCABLET MEDIA &nbsp;| &nbsp;INTERNSHIP<h6/>
           </div>
           <div class="accordion-item-body bg-dark">
             <div class="accordion-item-body-content">
@@ -339,7 +339,7 @@
         <div class="accordion-item">
           <div class="accordion-item-header bg-dark-light">
             <h4 class="light color-white">OpenSource Contributer</h4>
-            <p class="bold color-primary">ANITAB.ORG &nbsp;| &nbsp;OPENSOURCE</p>
+            <h6 class="bold color-primary">ANITAB.ORG &nbsp;| &nbsp;OPENSOURCE<h6/>
           </div>
           <div class="accordion-item-body bg-dark">
             <div class="accordion-item-body-content">
@@ -359,7 +359,7 @@
         <div class="accordion-item">
           <div class="accordion-item-header bg-dark-light">
             <h4 class="light color-white">Product Developer: Android</h4>
-            <p class="bold color-primary">FLOYDWIZ TECHNOLOGIES &nbsp;| &nbsp;INTERNSHIP</p>
+            <h6 class="bold color-primary">FLOYDWIZ TECHNOLOGIES &nbsp;| &nbsp;INTERNSHIP</h6>
           </div>
           <div class="accordion-item-body bg-dark">
             <div class="accordion-item-body-content">
@@ -380,7 +380,7 @@
         <div class="accordion-item">
           <div class="accordion-item-header bg-dark-light">
             <h4 class="light color-white">Freelance Android Developer</h4>
-            <p class="bold color-primary">EKLAVYA STUDY POINT &nbsp;| &nbsp;FREELANCE</p>
+            <h6 class="bold color-primary">EKLAVYA STUDY POINT &nbsp;| &nbsp;FREELANCE</h6>
           </div>
           <div class="accordion-item-body bg-dark">
             <div class="accordion-item-body-content">
@@ -400,7 +400,7 @@
         <div class="accordion-item">
           <div class="accordion-item-header bg-dark-light">
             <h4 class="light color-white">Lead Android Developer</h4>
-            <p class="bold color-primary">DWARKAWALA &nbsp;| &nbsp;INTERNSHIP</p>
+            <h6 class="bold color-primary">DWARKAWALA &nbsp;| &nbsp;INTERNSHIP</h6>
           </div>
           <div class="accordion-item-body bg-dark">
             <div class="accordion-item-body-content">
@@ -656,37 +656,58 @@
 
     <!-- <hr class="content-seperator"> -->
 
+    
+
+
     <footer>
       <div class="footer__container">
         <div class="block__links">
-          <ul>
-            <h5 class="color-primary bold">ADDRESS</h5>
-            <p class="color-white light">New Delhi</p>
-            <p class="color-white light">India</p>
-          </ul>
-          <ul>
-            <h5 class="color-primary bold">SERVICES</h5>
-            <p class="color-white light">Mobile App Development</p>
-            <p class="color-white light">Web Development</p>
-            <p class="color-white light">UI/UX Design</p>
-          </ul>
-          <ul>
-            <h5 class="color-primary bold">LINKS</h5>
-            <a href=""><p class="color-white light">Home</p></a>
-            <a href=""><p class="color-white light">Experience</p></a>
-            <a href=""><p class="color-white light">Projects</p></a>
-          </ul>
-          <ul>
-            <h5 class="color-primary bold">FOLLOW ME</h5>
-            <a href="https://github.com/rahulshah456"
-              ><p class="color-white light">Github</p></a
-            >
-            <a href="https://www.linkedin.com/in/rahul-kumar-shah-4b1b7b113/"
-              ><p class="color-white light">Linkedin</p></a
-            >
-            <a href="#"><p class="color-white light">Twitter</p></a>
-            <a href="#"><p class="color-white light">Dribble</p></a>
-          </ul>
+          <div>
+            <ul>
+              <h6 class="color-primary bold">ADDRESS</h6>
+              <p class="color-white light">New Delhi</p>
+              <p class="color-white light">India</p>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <h6 class="color-primary bold">SERVICES</h6>
+              <p class="color-white light">Mobile App Development</p>
+              <p class="color-white light">Web Development</p>
+              <p class="color-white light">UI/UX Design</p>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <h6 class="color-primary bold">LINKS</h6>
+              <a href="#home">
+                <p class="color-white light">Home</p>
+              </a>
+              <a href="#experience">
+                <p class="color-white light">Experience</p>
+              </a>
+              <a href="#projects">
+                <p class="color-white light">Projects</p>
+              </a>
+            </ul>
+          </div>
+          <div>
+            <ul>
+              <h6 class="color-primary bold">FOLLOW ME</h6>
+              <a href="https://github.com/rahulshah456" target="_blank" rel="noopener noreferrer">
+                <p class="color-white light">Github</p>
+              </a>
+              <a href="https://www.linkedin.com/in/rahulshah456/" target="_blank" rel="noopener noreferrer">
+                <p class="color-white light">Linkedin</p>
+              </a>
+              <a href="https://play.google.com/store/apps/developer?id=Droid2Developers" target="_blank" rel="noopener noreferrer">
+                <p class="color-white light">PlayStore</p>
+              </a>
+              <a href="https://dribbble.com/rahulshah456" target="_blank" rel="noopener noreferrer">
+                <p class="color-white light">Dribble</p>
+              </a>
+            </ul>
+          </div>
         </div>
         <div class="block__copyright">
           <img src="res/drawables/logo_dark.svg" />
