download resume enabled, refactored code

--- a/index.html
+++ b/index.html
@@ -596,9 +596,11 @@
 
           <hr class="horizontal-seperator" />
 
-          <button class="normal-button">
-            DOWNLOAD RESUME
-          </button>
+          <a href="https://drive.google.com/uc?id=1NGWO7q_8RxL6cenqC0NQwHYHgluLSVFv&export=download" download="RahulShah_USICT21_resume.pdf">
+            <button class="normal-button">
+              DOWNLOAD RESUME
+            </button>
+          </a>
         </div>
         <div class="block__contact">
           <h4 class="color-white bold">Let's Work Together</h4>
