hello svg updated

--- a/index.html
+++ b/index.html
@@ -416,9 +416,78 @@
           </div>
         </div>
       </section>
+
+
+    
+    <!-- <hr class="content-seperator" />
+
+      <div class="container_project">
+        <div class="container_project-block">
+          <div class="block_card-thumbnail">
+            <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2Fsmartsevak.webp?alt=media&token=0c7757c7-bea5-4f91-abf5-23a804a828a3" width="100%" alt="">
+          </div>
+          <div class="block__card-info">
+            <h4 class="bold">SmartSevak</h4>
+            <h6>An automated order placement platform accessible via whatsapp.</h6>
+          </div>
+
+        </div>
+
+      </div>
+
+    <hr class="content-seperator" />
+
+
+      <div class="container_project">
+        <div class="container_project-block">
+          <div class="block_card-thumbnail">
+            <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2Fsmartsevak.webp?alt=media&token=0c7757c7-bea5-4f91-abf5-23a804a828a3" width="100%" alt="">
+          </div>
+          <div class="block__card-info">
+            <h4 class="bold">PikaGames</h4>
+            <h6>An automated order placement platform accessible via whatsapp.</h6>
+          </div>
+
+        </div>
+
+      </div>
+
+    <hr class="content-seperator" />
+
+
+      <div class="container_project">
+        <div class="container_project-block">
+          <div class="block_card-thumbnail">
+            <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2Fsmartsevak.webp?alt=media&token=0c7757c7-bea5-4f91-abf5-23a804a828a3" width="100%" alt="">
+          </div>
+          <div class="block__card-info">
+            <h4 class="bold">Eklavya Study</h4>
+            <h6>An automated order placement platform accessible via whatsapp.</h6>
+          </div>
+
+        </div>
+
+      </div>
+
+    <hr class="content-seperator" />
+
+      <div class="container_project">
+        <div class="container_project-block">
+          <div class="block_card-thumbnail">
+            <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2Fsmartsevak.webp?alt=media&token=0c7757c7-bea5-4f91-abf5-23a804a828a3" width="100%" alt="">
+          </div>
+          <div class="block__card-info">
+            <h4 class="bold">PikaBrowser</h4>
+            <h6>An automated order placement platform accessible via whatsapp.</h6>
+          </div>
+
+        </div>
+
+      </div>
+
+    <hr class="content-seperator" /> -->
+
       <div class="container_projects">
-
-
         <div class="project__card" id="one">
           <div class="project_card--header">
             <h5 class="bold">SmartSevak</h5>
@@ -673,7 +742,6 @@
         </div>
 
       </div>
-
 
     </div>
 
