projects redesign completed

--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img bg-dark">
-              <img src="./res/drawables/wallset_thumb.webp" alt="" >
+            <div class="project_img" id="one">
+              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Fsmartsevak.webp?alt=media&token=b7581d2c-c986-4d5f-9977-a93ca764c8ac" alt="" >
               <div class="project_img_overlay">
                 <span class="project_counter heavy-bold">
                   <h2>&nbsp;01&nbsp;</h2>
@@ -463,8 +463,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img bg-dark">
-              <img src="./res/drawables/wallset_thumb.webp" alt="" >
+            <div class="project_img" id="two">
+              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Fpika_games.webp?alt=media&token=814afcf0-ac2d-49de-9bef-b3125161b63c" alt="" >
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;02&nbsp;</h2>
@@ -502,8 +502,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img bg-dark">
-              <img src="./res/drawables/wallset_thumb.webp" alt="" >
+            <div class="project_img" id="three">
+              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Feklavya_study.webp?alt=media&token=f77cd987-c3c4-4176-972d-74081be765b7" alt="" >
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;03&nbsp;</h2>
@@ -545,8 +545,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img bg-dark">
-              <img src="./res/drawables/wallset_thumb.webp" alt="" >
+            <div class="project_img" id="four">
+              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Fwallset_thumb.webp?alt=media&token=ad3d7e91-a950-4d51-a2a2-22ae40459782" alt="" >
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;04&nbsp;</h2>
@@ -666,12 +666,12 @@
 
           <a href="https://drive.google.com/uc?id=1NGWO7q_8RxL6cenqC0NQwHYHgluLSVFv&export=download" download="RahulShah_USICT21_resume.pdf">
             <button class="normal-button">
-              DOWNLOAD RESUME
+              DOWNLOAD RESUME ->
             </button>
           </a>
         </div>
         <div class="block__contact">
-          <h4 class="color-white bold">Let's Work Together</h4>
+          <h4 class="color-white bold">Let's Talk</h4>
           <p>
             I am Interested in freelancing and contract based projects -
             especially ambitious and large projects. However, If you have any
@@ -687,6 +687,7 @@
                   class="form-control"
                   id="inputName"
                   placeholder="Name"
+                  autocomplete="off"
                   required=""
                 />
               </div>
@@ -697,6 +698,7 @@
                   class="form-control"
                   id="inputEmail"
                   placeholder="Email"
+                  autocomplete="off"
                   required=""
                 />
               </div>
@@ -708,6 +710,8 @@
                 class="form-control"
                 id="inputSubject"
                 placeholder="Subject"
+                autocomplete="off"
+                required=""
               />
             </div>
             <div class="form-group">
@@ -716,12 +720,13 @@
                 class="form-control"
                 id="inputMessage"
                 placeholder="Message"
+                autocomplete="off"
                 name="message"
                 required=""
                 rows="5"
               ></textarea>
             </div>
-            <button type="submit" class="normal-button">SEND MESSAGE</button>
+            <button type="submit" class="normal-button">SEND MESSAGE -></button>
           </form>
         </div>
       </div>
