--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <!-- <link rel="stylesheet" type="text/css" href="styles/jet_brains_mono.css" /> -->
-    <link href="http://fonts.cdnfonts.com/css/google-sans" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/google-sans" rel="stylesheet">
 
     <!-- Integrated Packages -->
     <script
@@ -92,13 +92,13 @@
         <!--Main Intro Block-->
         <div class="block__header">
           <h4>
-            <span>THIS IS </span>
-            <span class="extra-bold">RAHUL </span>
-            <span>KUMAR SHAH</span>
+            <span class="light">THIS IS </span>
+            <span class="heavy-bold">RAHUL </span>
+            <span class="light">KUMAR SHAH</span>
           </h4>
-          <h6>
-            <span class="light">SOFTWARE DEVELOPER</span>
-          </h6>
+          <h5>
+            <span class="thin">SOFTWARE DEVELOPER</span>
+          </h5>
           <img src="./res/drawables/hello.svg" alt="Hello Message">
         </div>
       </div>
