projects.html added

--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img" id="one">
-              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Fsmartsevak.webp?alt=media&token=b7581d2c-c986-4d5f-9977-a93ca764c8ac" alt="" >
+            <div class="project_img" id="smartsevak">
+              <img id="thumb_smartsevak" src="" alt="" >
               <div class="project_img_overlay">
                 <span class="project_counter heavy-bold">
                   <h2>&nbsp;01&nbsp;</h2>
@@ -467,8 +467,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img" id="two">
-              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Fpika_games.webp?alt=media&token=814afcf0-ac2d-49de-9bef-b3125161b63c" alt="" >
+            <div class="project_img" id="pikapika">
+              <img id="thumb_pikagames" src="" alt="" >
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;02&nbsp;</h2>
@@ -510,8 +510,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img" id="three">
-              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Feklavya_study.webp?alt=media&token=f77cd987-c3c4-4176-972d-74081be765b7" alt="" >
+            <div class="project_img" id="eklavya">
+              <img id="thumb_eklavya" src="" alt="" >
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;03&nbsp;</h2>
@@ -556,8 +556,8 @@
 
         <div class="project">
           <div class="project_container_img bg-dark-light">
-            <div class="project_img" id="four">
-              <img src="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2F1200_800%2Fwallset_thumb.webp?alt=media&token=ad3d7e91-a950-4d51-a2a2-22ae40459782" alt="" >
+            <div class="project_img" id="wallset">
+              <img id="thumb_wallset" src="" alt="" >
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;04&nbsp;</h2>
@@ -602,7 +602,7 @@
         </div>
 
 
-        <a href="#home"><h5>&nbsp;View More Projects->&nbsp;</h5></a>
+        <a href="./projects.html"><h5>&nbsp;View More Projects->&nbsp;</h5></a>
         
 
       </div>
