lazy img load, minor UI changes, code refactored

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <div class="project">
           <div class="project_container_img bg-dark-light">
             <div class="project_img" id="smartsevak">
-              <img id="thumb_smartsevak" src="" alt="" >
+              <img id="thumb_smartsevak" src="" alt="" loading="lazy">
               <div class="project_img_overlay">
                 <span class="project_counter heavy-bold">
                   <h2>&nbsp;01&nbsp;</h2>
@@ -468,7 +468,7 @@
         <div class="project">
           <div class="project_container_img bg-dark-light">
             <div class="project_img" id="pikapika">
-              <img id="thumb_pikagames" src="" alt="" >
+              <img id="thumb_pikagames" src="" alt="" loading="lazy">
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;02&nbsp;</h2>
@@ -511,7 +511,7 @@
         <div class="project">
           <div class="project_container_img bg-dark-light">
             <div class="project_img" id="eklavya">
-              <img id="thumb_eklavya" src="" alt="" >
+              <img id="thumb_eklavya" src="" alt="" loading="lazy">
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;03&nbsp;</h2>
@@ -557,7 +557,7 @@
         <div class="project">
           <div class="project_container_img bg-dark-light">
             <div class="project_img" id="wallset">
-              <img id="thumb_wallset" src="" alt="" >
+              <img id="thumb_wallset" src="" alt="" loading="lazy">
               <div class="project_img_overlay">
                 <span class="heavy-bold project_counter">
                   <h2>&nbsp;04&nbsp;</h2>
