--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="smartsevak">
-                <img id="thumb_smartsevak" src="" alt="" >
+                <img id="thumb_smartsevak" src="" alt="" loading="lazy">
                 <div class="project_img_overlay">
                   <span class="project_counter heavy-bold">
                     <h2>&nbsp;01&nbsp;</h2>
@@ -95,7 +95,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="pikapika">
-                <img id="thumb_pikagames" src="" alt="" >
+                <img id="thumb_pikagames" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;02&nbsp;</h2>
@@ -138,7 +138,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="eklavya">
-                <img id="thumb_eklavya" src="" alt="" >
+                <img id="thumb_eklavya" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;03&nbsp;</h2>
@@ -184,7 +184,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="wallset">
-                <img id="thumb_wallset" src="" alt="" >
+                <img id="thumb_wallset" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;04&nbsp;</h2>
@@ -231,7 +231,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="pikapika">
-                <img id="thumb_pikabrowser" src="" alt="" >
+                <img id="thumb_pikabrowser" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="project_counter heavy-bold">
                     <h2>&nbsp;05&nbsp;</h2>
@@ -273,7 +273,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="mentorship">
-                <img id="thumb_mentorship" src="" alt="" >
+                <img id="thumb_mentorship" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;06&nbsp;</h2>
@@ -314,7 +314,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="inn91">
-                <img id="thumb_inn91" src="" alt="" >
+                <img id="thumb_inn91" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;07&nbsp;</h2>
@@ -357,7 +357,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="mlnavigation">
-                <img id="thumb_mlnavigation" src="" alt="" >
+                <img id="thumb_mlnavigation" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;08&nbsp;</h2>
@@ -399,7 +399,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="liveslider">
-                <img id="thumb_liveslider" src="" alt="" >
+                <img id="thumb_liveslider" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;09&nbsp;</h2>
@@ -442,7 +442,7 @@
           <div class="project">
             <div class="project_container_img bg-dark-light">
               <div class="project_img" id="portfolio">
-                <img id="thumb_portfolio" src="" alt="" >
+                <img id="thumb_portfolio" src="" alt=""  loading="lazy">
                 <div class="project_img_overlay">
                   <span class="heavy-bold project_counter">
                     <h2>&nbsp;10&nbsp;</h2>
