new meta tags added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Rahul Kumar Shah</title>
+
+    <!-- Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rahul Kumar Shah</title>
+    <meta name="description" content="Redefining quality of life by solving complex social challenges" />
+    <meta name="title" property="og:title" content="Rahul Kumar Shah" />
+    <meta property="og:type" content="Portfolio Website" />
+    <meta name="image" property="og:image" content="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456%2Fthumb%2Fdesktop.png?alt=media" />
+    <meta name="description" property="og:description" content="Hello, I am currently an undergraduate student at GGSIPU, Dwarka and pursuing my Bachelor's in Information Technology. I've worked on Innovative live projects that solve real-world problems and collaborated with talented people to create digital products for both business and product use." />
+    <meta name="author" content="rahulshah456" />
 
     <!-- Shortcut Icons -->
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
