minor meta value modifications

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       content="Hello, I'm Rahul, a Software Developer & Designer based in India. I am majorly skilled in Android and Backend with NodeJS. I am a B.Tech(IT) Graduate From USICT'21."
     />
     <meta
+      name="image"
       property="og:image"
       content="https://firebasestorage.googleapis.com/v0/b/walshot-8b648.appspot.com/o/rahulshah456/thumb/desktop.png?alt=media"
     />
