minor meta value modifications

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://rahulshah456.github.io/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Rahul Kumar Shah - Portfolio" />
+    <meta property="og:title" content="Rahul Kumar Shah" />
     <meta
       property="og:description"
       content="Hello, I'm Rahul, a Software Developer & Designer based in India. I am majorly skilled in Android and Backend with NodeJS. I am a B.Tech(IT) Graduate From USICT'21."
